--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/rootly_mcp_server"]
+packages = ["src/rootlyhq_mcp_server"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
