--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "rootlyhq_mcp_server"
-version = "0.0.2"
+name = "rootly_mcp_server"
+version = "0.0.1"
 description = "A Model Context Protocol server for Rootly APIs using OpenAPI spec"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -30,7 +30,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/rootlyhq_mcp_server"]
+packages = ["src/rootly_mcp_server"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
