--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ packages = ["src/rootly_mcp_server"]
 [tool.hatch.metadata]
 allow-direct-references = true
 
+[tool.hatch.build.targets.wheel.sources]
+"src" = ""
+
+[tool.hatch.build.targets.wheel.include]
+"src/rootly_mcp_server/data" = "rootly_mcp_server/data"
+
 [project.scripts]
 rootly-mcp-server = "rootly_mcp_server.__main__:main"
 
