--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: Build and Deploy
 
 queue:
-  name: Deployment Queue
+  name: Build Queue
   scope: project
 
 auto_cancel:
@@ -15,7 +15,7 @@ agent:
     os_image: ubuntu2204
 
 blocks:
-  - name: 'Build and Deploy'
+  - name: 'Build'
     dependencies: []
     task:
       secrets:
@@ -26,7 +26,7 @@ blocks:
           - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com
       jobs:
-        - name: Build and Deploy
+        - name: Build
           commands:
             - checkout
             - export BUILDKIT_PROGRESS=plain
@@ -35,31 +35,11 @@ blocks:
                 -t 657716690934.dkr.ecr.us-east-1.amazonaws.com/rootly/mcp:${SEMAPHORE_GIT_SHA} \
                 -t 657716690934.dkr.ecr.us-east-1.amazonaws.com/rootly/mcp:latest \
                 -t 657716690934.dkr.ecr.us-east-1.amazonaws.com/rootly/mcp:production .
-            - |
-              export TASK_FAMILY=rootly-mcp-server
-              export CONTAINER_NAME=mcp
-              export IMAGE=657716690934.dkr.ecr.us-east-1.amazonaws.com/rootly/mcp:${SEMAPHORE_GIT_SHA}
-              NEW_TASK_DEFINITION_ARN=$(./.semaphore/update-task-definition.sh)
 
-              aws ecs update-service \
-                --cluster rootly-web \
-                --service rootly-mcp-server \
-                --task-definition "$NEW_TASK_DEFINITION_ARN" \
-                --deployment-configuration "deploymentCircuitBreaker={enable=true,rollback=true},maximumPercent=200,minimumHealthyPercent=100" \
-                --force-new-deployment >/dev/null
+promotions:
+  - name: Deploy
+    pipeline_file: deploy.yml
+    deployment_target: production
 
-              echo "Waiting for service to stabilize at the new revision..."
-
-              # Wait for the service to stabilize for up to 10 minutes
-              for i in {1..40}; do
-                if aws ecs describe-services --cluster rootly-web --service rootly-mcp-server --output json | jq -e \
-                  '.services | map(select((.deployments | length) != 1 or .runningCount != .desiredCount)) | length == 0' >/dev/null; then
-                  break
-                fi
-                sleep 15
-              done
-
-              if [ $i -eq 40 ]; then
-                echo "Service failed to stabilize after 10 minutes"
-                exit 1
-              fi
+    auto_promote:
+      when: branch = 'main' AND result = 'passed'
