fix: Fix GitHub Actions workflow - replace uv pip with standard pip for CI/CD compatibility
The original workflow failed because 'uv pip install' requires a virtual environment,
but GitHub Actions runners don't have one by default. Using standard pip is more
reliable for CI/CD environments.

--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -17,10 +17,9 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install uv and build tools
+      - name: Install build tools
         run: |
-          pip install uv
-          uv pip install build twine
+          pip install build twine
 
       - name: Build package
         run: |
