--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "requests>=2.28.0", # For API calls
     "httpx>=0.24.0",    # For async HTTP client
     "pydantic>=2.0.0",  # For data validation
+    "brotli>=1.0.0",    # For Brotli compression support in httpx
 ]
 
 [project.urls]
