--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,10 +50,35 @@ rootly-mcp-server = "rootly_mcp_server.__main__:main"
 dev = ["black>=23.0.0", "isort>=5.0.0"]
 
 [tool.uv]
-dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]
+dev-dependencies = [
+    "pyright>=1.1.389", 
+    "ruff>=0.7.3", 
+    "pytest>=8.0.0",
+    "pytest-cov>=4.0.0",         # Coverage reporting
+    "pytest-asyncio>=0.23.0",    # Async testing support
+    "pytest-mock>=3.12.0",       # Mocking utilities
+    "pytest-timeout>=2.2.0",     # Test timeout handling
+    "respx>=0.20.0",              # HTTP request mocking
+    "sseclient-py>=1.8.0",       # Server-Sent Events client for remote tests
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+addopts = [
+    "-v",                          # Verbose output
+    "--strict-markers",            # Require marker registration
+    "--tb=short",                  # Short traceback format
+    "--cov=src/rootly_mcp_server", # Coverage for main package
+    "--cov-report=term-missing",   # Show missing lines in coverage
+    "--cov-report=xml",            # XML coverage for CI
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests", 
+    "remote: Remote server tests (require API token)",
+    "slow: Tests that take longer to run",
+]
+asyncio_mode = "auto"              # Auto-detect async tests
