--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "httpx>=0.24.0",    # For async HTTP client
     "pydantic>=2.0.0",  # For data validation
     "brotli>=1.0.0",    # For Brotli compression support in httpx
+    "scikit-learn>=1.3.0", # For text similarity and ML utilities
+    "numpy>=1.24.0",    # For numerical operations
 ]
 
 [project.urls]
