Revert "fix: auto-promote deployment on master branch"
This reverts commit dbf6aa817085069794396cb26880d0ef296d0c05.

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -42,4 +42,4 @@ promotions:
     deployment_target: production
 
     auto_promote:
-      when: branch = 'master' AND result = 'passed'
+      when: branch = 'main' AND result = 'passed'
