--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
-    - uses: astral-sh/setup-uv@v7
+    - uses: astral-sh/setup-uv@7eb50e6e20e1e2009087999ba91242e80253875f # v7
     - run: uv python install 3.12 && uv sync --dev
     
     # Fast local validation  
@@ -25,7 +25,7 @@ jobs:
       run: uv run pytest tests/integration/local/ -x
     
     - name: Upload coverage
-      uses: codecov/codecov-action@v5
+      uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5
       with:
         file: ./coverage.xml
 
@@ -34,7 +34,7 @@ jobs:
     needs: local-tests
     steps:
     - uses: actions/checkout@v6
-    - uses: astral-sh/setup-uv@v7
+    - uses: astral-sh/setup-uv@7eb50e6e20e1e2009087999ba91242e80253875f # v7
     - run: uv python install 3.12 && uv sync --dev
     
     # Build and run the Docker container
