--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,10 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "fastmcp>=2.9.0",
-    "requests>=2.28.0", # For API calls
-    "httpx>=0.24.0",    # For async HTTP client
-    "pydantic>=2.0.0",  # For data validation
+    "fastmcp==3.0.2",  # Pin to specific version
+    "requests==2.32.5", # Pin to specific version
+    "httpx==0.28.1",   # Pin to specific version
+    "pydantic==2.12.5",  # Pin to specific version
     "brotli>=1.0.0",    # For Brotli compression support in httpx
     "scikit-learn>=1.3.0", # For text similarity and ML utilities
     "numpy>=1.24.0",    # For numerical operations
